org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/failing/MemberNameTests_MultipleInheritance_nestedScopeLinkingTest.alf.xt
/* 
XPECT_SETUP org.omg.sysml.xpect.tests.testsuite.SysMLXtextTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
			}
		}
	}
END_SETUP 
*/
//The linking/scoping tests for "b" pass but not "a"
//"a" causes Rnti

//XPECT noErrors ---> ""
package test{
	class A{
		class a {}
		class xx {}
	}
	class B specializes A {
		//pass
		//XPECT linkedName at A::a --> test.A.a
		/* XPECT scope at A::a ---
		    A, A.a, A.xx, B, B.a, B.b, B.b1, B.xx, 
			C, C.a, C.b, C.b1, C.c0, C.c1, C.xx, D, a, b, b1, 
			test.A, test.A.a, test.A.xx, test.B, test.B.a, test.B.b, test.B.b1, test.B.xx, test.C, test.C.a, test.C.b, test.C.b1, test.C.c0, test.C.c1,			test.C.xx, test.D, xx,
			Base.Anything, Base.BehaviorOccurrence,			Base.BinaryLink, Base.EnumeratedValue, Base.FunctionEvaluation, Base.Link,			Base.LiteralEvaluation, Base.NullEvaluation, Base.Object, Base.Occurrence, Base.SelfLink, Base.Value
		--- */
		class b specializes A::a {}
		//fail
		//XPECT linkedName at a --> test.A.a
		/* XPECT scope at a ---
	--- */
		class b1 specializes a{}
	}
	class C specializes B{
		//fail
		//XPECT linkedName at a --> test.A.a
		/* XPECT scope at a ---
	--- */
		class c0 specializes a {}
		//pass
		//XPECT linkedName at b --> test.B.b
		/* XPECT scope at b ---
		A, A.a, A.xx, B, B.a, B.b, B.b1, B.xx, 
		C, C.a, C.b, C.b1, C.c0, C.c1, C.xx, D, a, b, b1, c0, c1, test.A, test.A.a, test.A.xx,
		test.B, test.B.a, test.B.b, test.B.b1, test.B.xx, test.C, test.C.a, test.C.b, test.C.b1, test.C.c0,
		test.C.c1, test.C.xx, test.D, xx,
		Base.Anything, Base.BehaviorOccurrence,Base.BinaryLink, Base.EnumeratedValue, Base.FunctionEvaluation, Base.Link,Base.LiteralEvaluation, Base.NullEvaluation, Base.Object, Base.Occurrence, Base.SelfLink, Base.Value
	--- */
		class c1 specializes b {}
	}
	class D specializes A::xx{} 
}
